Modules/vpc-module/t2_internet_gateway.tf
## Create Internet Gateway
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = {
    Name = "${var.internet_gateway_name}"
    }
}
